<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BReddit</string>
    <string name="onboarding_hi">Welcome to BReddit!</string>
    <string name="onboarding_start">Start</string>
    <string name="onboarding_hand">Hi hand</string>
    <string name="onboarding_description">Russian reddit client</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_email">Email</string>
    <string name="login_min_length_warning">Required length - 8 symbols</string>
    <string name="login_email_warning">Is not email!</string>
    <string name="login_enter_your_email">Enter your email…</string>
    <string name="login_enter_your_password">Enter your password…</string>
    <string name="feed_interpoint">·</string>
    <string name="feed_more">···</string>
    <string name="vote_now">Vote now!</string>
    <string name="auth_canceled">Login failed!</string>
    <string name="reddit_base_url" translatable="false">https://reddit.com</string>
    <string name="loading_error">Loading error</string>
    <string name="tap_to_retry">Tap to retry\nHold to open URL</string>
    <string name="vote_error">Vote network error!</string>
    <string name="feed_error">Network error. Tap to retry…</string>
    <string name="see_this_post">See this via BReddit!</string>
    <string name="cached">Cached subreddits</string>
    <string name="network_fail">Network is unavailable</string>
    <string name="get_more_text">"…show entire text "</string>
    <string name="profile">Profile</string>
    <string name="minutes_mini">m</string>
    <string name="hours_mini">h</string>
    <string name="days_mini">d</string>
    <string name="space"> </string>
    <string name="ago">ago</string>
    <string name="feed">Feed</string>
    <string name="logout">Log out</string>
    <string name="wanna_quit">Log out from your reddit account and erase local data?</string>
    <string name="Ok">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="karma">Karma</string>
    <string name="coins">Coins</string>
    <string name="loading">Loading…</string>
    <string name="try_again">Try again</string>
    <string name="see_my_profile">See my profile via BReddit!</string>
    <string name="save_error">Save post network error!</string>
</resources>