<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context=".OnBoardingFragment">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/onboarding_viewpager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:contentDescription="@string/onboarding_hand"
        android:src="@drawable/ic_baseline_share_24"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h_top" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/guideline_w_start"
        app:layout_constraintRight_toRightOf="@id/guideline_w_end"
        app:layout_constraintTop_toBottomOf="@id/onboarding_viewpager">

        <ru.tinkoff.scrollingpagerindicator.ScrollingPagerIndicator
            android:id="@+id/onboarding_viewpager_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:spi_dotColor="@color/background_second"
            app:spi_dotSize="10dp"
            app:spi_looped="true" />

    </FrameLayout>


    <TextView
        android:id="@+id/hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="@string/onboarding_hi"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/hi_description"
        app:layout_constraintLeft_toLeftOf="@id/guideline_w_start"
        app:layout_constraintRight_toRightOf="@id/guideline_w_end" />

    <TextView
        android:id="@+id/hi_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:text="@string/onboarding_description"
        app:layout_constraintBottom_toTopOf="@id/start_button"
        app:layout_constraintLeft_toLeftOf="@id/guideline_w_start"
        app:layout_constraintRight_toRightOf="@id/guideline_w_end" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="@string/onboarding_start"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h_bot"
        app:layout_constraintLeft_toLeftOf="@id/guideline_w_start"
        app:layout_constraintRight_toRightOf="@id/guideline_w_end" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_w_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_bot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_w_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>